--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="google-site-verification" content="dBZ1LLq91bb4DMAhLhVjf8NsSO3b6LvtWp6Ufj7GthY" />
   <title>Emirates Routes via Larnaca (LCA) — Unofficial Guide</title>
   <meta name="description" content="Modern, static, standalone site listing Emirates routes served via Larnaca Airport (LCA) — direct flights to Dubai/Malta and intermediate routes via Dubai to global destinations." />
   <link rel="icon" href="data:," />
