--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="google-site-verification" content="dBZ1LLq91bb4DMAhLhVjf8NsSO3b6LvtWp6Ufj7GthY" />
   <title>Emirates Routes via Larnaca (LCA) — Unofficial Guide</title>
+  <meta property="og:title" content="Emirates Routes via Larnaca (LCA)">
+<meta property="og:description" content="Direct LCA→Dubai/Malta & via-Dubai connections worldwide. Unofficial, fast, mobile-friendly.">
+<meta property="og:image" content="https://telcoavenue.github.io/Emirates-Flying-Routes-From-LCA-Airport//og-cover-lca-emirates.png">
+<meta property="og:type" content="website">
+<link rel="icon" href="https://<your-domain>/favicon-ek-512.png">
+
   <meta name="msvalidate.01" content="0609287EF4026137F3ECDCD5032014B2" />
   <meta name="description" content="Modern, static, standalone site listing Emirates routes served via Larnaca Airport (LCA) — direct flights to Dubai/Malta and intermediate routes via Dubai to global destinations." />
   <link rel="icon" href="data:," />
