--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
       return (
         React.createElement(React.Fragment, null,
           React.createElement("div", { className: "relative isolate", style: { backgroundImage: "url(" + HERO_BG + ")", backgroundSize: "cover", backgroundPosition: "center" } },
-            React.createElement("div", { className: "absolute inset-0 bg-gradient-to-b from-black/35 via-black/20 to-white/0" }),
+React.createElement("div", { className: "absolute inset-0 pointer-events-none bg-gradient-to-b from-black/35 via-black/20 to-white/0" }),
             React.createElement("header", { className: "max-w-6xl mx-auto px-5 sm:px-6 lg:px-8 py-6 flex items-center justify-between" },
               React.createElement("div", { className: "flex items-center gap-3" },
                 React.createElement("div", { className: "h-9 w-9 rounded-xl bg-red-600 flex items-center justify-center shadow" },
