--- a/index.html
+++ b/index.html
@@ -103,10 +103,33 @@
   </script>
 </head>
 
-<body class="min-h-screen bg-gradient-to-b from-rose-50 to-white text-gray-900">
+<body class="min-h-screen bg-gradient-to-b from-rose-50 to-white text-gray-900"> 
+  
   <!-- Hidden container for Google -->
   <div id="google_translate_element"></div>
 
+<!-- --> 
+
+  <!-- Emirates “Fly Better” banner (fan-made, not affiliated) -->
+  <div class="mx-auto w-full max-w-[1100px] px-4 my-4">
+    <a href="https://www.emirates.com/cy/english/book/" target="_blank" rel="noopener"
+       class="block group" aria-label="Book your Emirates ticket">
+      <img
+        src="/assets/upper-banner.png"  <!-- put your banner file here -->
+        alt="Emirates — Fly Better. Book your next adventure."
+        width="1152" height="768"
+        class="w-full h-auto rounded-2xl shadow-lg ring-1 ring-black/5
+               transition group-hover:brightness-105 group-hover:shadow-xl"
+        loading="eager" decoding="async">
+    </a>
+    <p class="mt-2 text-center text-xs text-gray-500">
+      Unofficial fan-made banner — not affiliated with Emirates.
+    </p>
+  </div>
+
+<!-- --> 
+
+  
   <div id="root"></div>
 
   <!-- React (CDN) -->
