--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <a href="https://www.emirates.com/cy/english/book/" target="_blank" rel="noopener"
        class="block group" aria-label="Book your Emirates ticket">
       <img
-        src="/assets/upper-banner.png"  <!-- put your banner file here -->
+        src="upper-banner.png"  <!-- put your banner file here -->
         alt="Emirates — Fly Better. Book your next adventure."
         width="1152" height="768"
         class="w-full h-auto rounded-2xl shadow-lg ring-1 ring-black/5
