--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
     <a href="https://www.emirates.com/cy/english/book/" target="_blank" rel="noopener"
        class="block group" aria-label="Book your Emirates ticket">
       <img
-        src="upper-banner.png"  <!-- put your banner file here -->
+        src="upper-banner.JPG"  <!-- put your banner file here -->
         alt="Emirates — Fly Better. Book your next adventure."
-        width="1152" height="768"
+        width="475" height="115"
         class="w-full h-auto rounded-2xl shadow-lg ring-1 ring-black/5
                transition group-hover:brightness-105 group-hover:shadow-xl"
         loading="eager" decoding="async">
