--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
   <div class="mx-auto w-full max-w-[1100px] px-4 my-4">
     <a href="https://www.emirates.com/cy/english/book/" target="_blank" rel="noopener"
        class="block group" aria-label="Book your Emirates ticket">
-      <img
-        src="upper-banner.JPG"  <!-- put your banner file here -->
+      <img  
+        src="upper-banner.JPG" 
         alt="Emirates — Fly Better. Book your next adventure."
         width="475" height="115"
         class="w-full h-auto rounded-2xl shadow-lg ring-1 ring-black/5
